swagger doc for companies
